# 1BillionRowChallenge

./: README.MD
.devcontainer/: devcontainer-lock.json  devcontainer.json
python_1brc/: main.py  requirements.txt
python_1brc/.devcontainer/: devcontainer.json
rust_1brc/: Cargo.toml  README.MD
rust_1brc/.devcontainer/: devcontainer.json
rust_1brc/src/: main.rs  purple_mist.rs  rangnargrootkeorkamp.rs  thebracket.rs
