[package]
name = "rust_1brc"
version = "0.1.0"
edition = "2021"
default-run = "1brc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.36.2", features = ["csv", "lazy", "nightly", "streaming"]}
rand = { version = "0.8.5", optional = true }
rand_distr = { version = "0.4.3", optional = true }
color-eyre = "0.6.2"
indicatif = { version = "0.17.7", features = ["rayon"] }
rayon = "1.8.0"
regex = "1.10.2"
rustc-hash = "1.1.0"
memmap2 = "0.9.3"
ahash = "0.8.7"
anyhow = "1.0.79"
assert2 = "0.3.11"
colored = "2.1.0"
fxhash = "0.2.1"
ptr_hash = { git = "https://github.com/ragnargrootkoerkamp/ptrhash", default_features = false }

[features]
# generator = ["anyhow", "rand", "rand_distr"]

[[bin]]
name = "generate"
required-features = ["generator"]

[[bin]]
name = "1brc"
path = "src/main.rs"